Multiple features shown:    1. Controls now has their wrapper that includes part for data validation result    2. Controls are now rendered using dynamicComponentLoader, and components that should be used per entity property is defined on entity view form itself    3. Few ways of view form customization is shown - Adding new control to specific position, replacing component that should be used for specific property    4. Data sharing between components is shown - restaurant-wrapper.component.ts is example where entity from view form filters and shows related FoodMenus.    5. Router that navigates back to last location is shown in foodmenu-detail.component.ts    6. Component templates should be defined as separated html files, not embedded in component decorator code

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /src/AJ2MVC.Web/wwwroot/lib/*
 /src/AJ2MVC.Web/wwwroot/js/*
 /src/AJ2MVC.Rhetos/obj/*
+/src/AJ2MVC.Web/*.zip
+/src/AJ2MVC.Web/wwwroot/components/*
